Doc: Online CSS: Fix image captions overlapping images used in tables
Pick-to: 6.1 5.15
Fixes: QTBUG-90963

--- a/doc/global/template/style/online.css
+++ b/doc/global/template/style/online.css
@@ -875,6 +875,9 @@ li a.active {
   margin-left:3px;
   font-style:italic
 }
+.context table p.figCaption {
+  transform:initial;
+}
 .context table {
   vertical-align:initial
 }
